logstash-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: elastic
    component: logstash
  name: logstash
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: elastic
      component: logstash
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: elastic
        component: logstash
    spec:
      containers:
      - image: docker.elastic.co/logstash/logstash:7.5.1
        imagePullPolicy: IfNotPresent
        name: logstash
        ports:
        - containerPort: 5044
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        - containerPort: 9600
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/logstash/config
          name: logstash-config
        - mountPath: /usr/share/logstash/pipeline
          name: logstash-pipeline
        - mountPath: /usr/share/logstash/certs
          name: logstash-es-cert
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: logstash-config
        name: logstash-config
      - configMap:
          defaultMode: 420
          name: logstash-pipeline
        name: logstash-pipeline
      - name: logstash-es-cert
        secret:
          defaultMode: 420
          optional: false
          secretName: logstash-es-cert
