es-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    common.k8s.elastic.co/type: elasticsearch
    elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
  name: elasticsearch
spec:
  port:
    targetPort: 9200
  subdomain: ""
  to:
    kind: Service
    name: elasticsearch-es-http
    weight: 100
  wildcardPolicy: None
  tls:
    insecureEdgeTerminationPolicy: None
    termination: reencrypt
    destinationCACertificate: |-
