kb-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    common.k8s.elastic.co/type: kibana
    kibana.k8s.elastic.co/name: kibana
  name: kibana
spec:
  host: elastic-system
  port:
    targetPort: 5601
  subdomain: ""
  to:
    kind: Service
    name: kibana-kb-http
    weight: 100
  wildcardPolicy: None
  tls:
    insecureEdgeTerminationPolicy: None
    termination: reencrypt
    destinationCACertificate: |-
